--- a/APPNAME/templates/html/register.html
+++ b/APPNAME/templates/html/register.html
@@ -1,19 +1,19 @@
 {% extends 'html/index.html'%}
-
+{% load static%}
 {% block content %}
 
 
 
-
-	<form action="" method="post">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/register.css'%}">
+	<form action="" method="post" class="box">
 	{% csrf_token %}
-
-	FIRST NAME<input type="text" name="first_name" placeholder="First Name"><br>
-	LAST NAME<input type="text" name="last_name" placeholder="Last Name"><br>
-	EMAIL<input type="email" name="email" placeholder="email"><br>
-	USERNAME<input type="username" name="username" placeholder="Username"><br>
-	PASSWORD<input type="password" name="password1" placeholder="Password"><br>
-	CONFIRM PASSWORD<input type="password" name="password2" placeholder="Confirm Password"><br>
+	<h1>SIGN UP</h1>
+	<input type="text" name="first_name" placeholder="First Name">
+	<input type="text" name="last_name" placeholder="Last Name">
+	<input type="text" name="email" placeholder="email">
+	<input type="text" name="username" placeholder="Username">
+	<input type="text" name="password1" placeholder="Password">
+	<input type="text" name="password2" placeholder="Confirm Password">
 	<input type="submit">
 	</form>
 
