--- a/APPNAME/templates/html/register.html
+++ b/APPNAME/templates/html/register.html
@@ -5,15 +5,19 @@
 
 
 	<link rel="stylesheet" type="text/css" href="{% static 'css/register.css'%}">
-	<form action="" method="post" class="box">
-	{% csrf_token %}
+	<form action="" method="post" class="box">{% csrf_token %}
+
+
+	{% if error %}
+	{{ error }}
+	{% endif %}
 	<h1>SIGN UP</h1>
 	<input type="text" name="first_name" placeholder="First Name">
 	<input type="text" name="last_name" placeholder="Last Name">
 	<input type="text" name="email" placeholder="email">
 	<input type="text" name="username" placeholder="Username">
-	<input type="text" name="password1" placeholder="Password">
-	<input type="text" name="password2" placeholder="Confirm Password">
+	<input type="password" name="password1" placeholder="Password">
+	<input type="password" name="password2" placeholder="Confirm Password">
 	<input type="submit">
 	</form>
 
