design default email reset
design default email reset

--- a/APPNAME/templates/html/change_password.html
+++ b/APPNAME/templates/html/change_password.html
@@ -1,7 +1,11 @@
 {% extends 'html/index.html' %}
-
+{% load static %}
 {% block content%}
-<form method="post">
+
+<link rel="stylesheet" type="text/css" href="{% static 'css/change_password.css'%}">
+
+<div class="container">
+<form method="post" class="change_password">
 
 <h1>Change Password...</h1><br>
 
@@ -13,5 +17,5 @@
   {{ form.as_p }}
   <button type="submit">Save changes</button>
 </form>
-
+</div>
 {% endblock %}
