--- a/APPNAME/templates/html/index.html
+++ b/APPNAME/templates/html/index.html
@@ -8,7 +8,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{% url 'home' %}">SOUNDTREES</a>
+  <a class="navbar-brand" href="{% url 'home' %}">BAYANI LOGO</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -19,14 +19,18 @@
 
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'home' %}">HOME<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'home' %}">PRODUCT <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'home' %}">PADI CATALOG <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'home' %}">ABOUT <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'home' %}">BAYANI COLLECITON <span class="sr-only">(current)</span></a>
       </li>
+       <li class="nav-item active">
+        <a class="nav-link" href="{% url 'home' %}">PARTNER STORES <span class="sr-only">(current)</span></a>
+      </li>
+   
    
      </ul>
       <ul class="navbar-nav">
@@ -72,9 +76,68 @@
 
 
 {% block content %}
+<link rel="stylesheet" type="text/css" href="{%static 'css/slider.css'%}">
+<div class="slidershow middle">
+
+<div class="slides">
+  <input type="radio" name="r" id="r1" checked>
+  <input type="radio" name="r" id="r2">
+  <input type="radio" name="r" id="r3">
+  <input type="radio" name="r" id="r4">
+  <input type="radio" name="r" id="r5">
+
+
+  <div class="slide s1" id="one">
+    <img src="{% static 'images/blue.png'%}">
+
+    <label class="prev" for="r5"><span>&#x2039;</span></label>
+    <label class="next" for="r2"><span>&#x203a;</span></label>
+  </div>
+
+  <div class="slide" id="two">
+    <img src="{% static 'images/blue2.png'%}">
+
+    <label class="prev" for="r1"><span>&#x2039;</span></label>
+    <label class="next" for="r3"><span>&#x203a;</span></label>
+  </div>
+
+
+  <div class="slide" id="three">
+    <img src="{% static 'images/green.png'%}">
+
+    <label class="prev" for="r2"><span>&#x2039;</span></label>
+    <label class="next" for="r4"><span>&#x203a;</span></label>
+  </div>
+
+  <div class="slide" id="four">
+    <img src="{% static 'images/red.png'%}">
+
+    <label class="prev" for="r3"><span>&#x2039;</span></label>
+    <label class="next" for="r5"><span>&#x203a;</span></label>
+  </div>
+
+
+  <div class="slide" id="five">
+    <img src="{% static 'images/yellow.png'%}">
+
+    <label class="prev" for="r4"><span>&#x2039;</span></label>
+    <label class="next" for="r1"><span>&#x203a;</span></label>
+  </div>
 
 
 
+  <div class="navigation">
+    <label for="r1" class="bar" id="dot1"></label>
+    <label for="r2" class="bar" id="dot2"></label>
+    <label for="r3" class="bar" id="dot3"></label>
+    <label for="r4" class="bar" id="dot4"></label>
+    <label for="r5" class="bar" id="dot5"></label>
+
+  </div>
+
+
+</div>
+</div>
 {% endblock %}
 </body>
 
