--- a/APPNAME/templates/html/index.html
+++ b/APPNAME/templates/html/index.html
@@ -3,10 +3,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>UserManagement</title>
-</head>
 
-
+  
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="{% url 'home' %}">BAYANI LOGO</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,80 +70,80 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-
-
-
-
+</head>
 
 <body>
 
 
 
 {% block content %}
-<link rel="stylesheet" type="text/css" href="{%static 'css/slider.css'%}">
-<div class="slidershow middle">
 
-<div class="slides">
-  <input type="radio" name="r" id="r1" checked>
-  <input type="radio" name="r" id="r2">
-  <input type="radio" name="r" id="r3">
-  <input type="radio" name="r" id="r4">
-  <input type="radio" name="r" id="r5">
-
-
-  <div class="slide s1" id="one">
-    <img src="{% static 'images/blue.png'%}">
-
-    <label class="prev" for="r5"><span>&#x2039;</span></label>
-    <label class="next" for="r2"><span>&#x203a;</span></label>
-  </div>
-
-  <div class="slide" id="two">
-    <img src="{% static 'images/blue2.png'%}">
-
-    <label class="prev" for="r1"><span>&#x2039;</span></label>
-    <label class="next" for="r3"><span>&#x203a;</span></label>
-  </div>
-
-
-  <div class="slide" id="three">
-    <img src="{% static 'images/green.png'%}">
-
-    <label class="prev" for="r2"><span>&#x2039;</span></label>
-    <label class="next" for="r4"><span>&#x203a;</span></label>
-  </div>
-
-  <div class="slide" id="four">
-    <img src="{% static 'images/red.png'%}">
-
-    <label class="prev" for="r3"><span>&#x2039;</span></label>
-    <label class="next" for="r5"><span>&#x203a;</span></label>
-  </div>
-
-
-  <div class="slide" id="five">
-    <img src="{% static 'images/yellow.png'%}">
-
-    <label class="prev" for="r4"><span>&#x2039;</span></label>
-    <label class="next" for="r1"><span>&#x203a;</span></label>
-  </div>
+  <link rel="stylesheet" type="text/css" href="{%static 'css/imageslider.css'%}">
 
 
 
-  <div class="navigation">
-    <label for="r1" class="bar" id="dot1"></label>
-    <label for="r2" class="bar" id="dot2"></label>
-    <label for="r3" class="bar" id="dot3"></label>
-    <label for="r4" class="bar" id="dot4"></label>
-    <label for="r5" class="bar" id="dot5"></label>
-
-  </div>
-
-
+<div class="slider middle">
+      <div class="slides">
+        <!--radio buttons start-->
+        <input type="radio" name="radio-btn" id="radio1">
+        <input type="radio" name="radio-btn" id="radio2">
+        <input type="radio" name="radio-btn" id="radio3">
+        <input type="radio" name="radio-btn" id="radio4">
+        <!--radio buttons end-->
+        <!--slide images start-->
+        <div class="slide first">
+          <img src="{%static 'images/yellow.jpg'%}" alt="">
+        </div>
+        <div class="slide">
+          <img src="{%static 'images/fourwhite.jpg'%}" alt="">
+        </div>
+        <div class="slide">
+          <img src="{%static 'images/blue.png'%}" alt="">
+        </div>
+        <div class="slide">
+          <img src="{%static 'images/haha.jpg'%}" alt="">
+        </div>
+        <!--slide images end-->
+        <!--automatic navigation start-->
+        <div class="navigation-auto">
+          <div class="auto-btn1"></div>
+          <div class="auto-btn2"></div>
+          <div class="auto-btn3"></div>
+          <div class="auto-btn4"></div>
+        </div>
+        <!--automatic navigation end-->
+      </div>
+      <!--manual navigation start-->
+      <div class="navigation-manual">
+        <label for="radio1" class="manual-btn"></label>
+        <label for="radio2" class="manual-btn"></label>
+        <label for="radio3" class="manual-btn"></label>
+        <label for="radio4" class="manual-btn"></label>
+      </div>
+      <!--manual navigation end-->
 </div>
-</div>
+    <!--image slider end-->
+
+    <script type="text/javascript">
+    var counter = 1;
+    setInterval(function(){
+      document.getElementById('radio' + counter).checked = true;
+      counter++;
+      if(counter > 4){
+        counter = 1;
+      }
+    }, 5000);
+    </script>
+    
 {% endblock %}
+
 </body>
+
+
+
+
+
+
 
 
 
@@ -151,5 +155,53 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
+
+
+
+<link rel="stylesheet" type="text/css" href="{%static 'css/footer.css'%}">
+<main></main>
+    <footer>
+        <div class="container">
+            <div class="ftr">
+                <h3>About</h3>
+                <ul class="content">
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">Work</a></li>
+                </ul>
+            </div>
+            <div class="ftr">
+                <h3>Contact</h3>
+                <ul class="content">
+                    <li><a href="#">forwork.rodriguez@gmail.com</a></li>
+                    <li><a href="#">(+63)9352274181</a></li>
+                    <li><a href="#">Norzagaray, Bulacan</a></li>
+                </ul>
+            </div>
+            <div class="ftr">
+                <h3>Social</h3>
+                <ul class="content">
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </div>
+            <div class="ftr">
+                <h3>Join Our Newsletter</h3>
+                <form action="#">
+                    <input type="email" placeholder="Enter Your Email." required>
+                    <div class="btn">
+                        <input type="submit" value="Subscribe">
+                    </div>
+                </form>
+            </div>
+
+        </div>
+    </footer>
+
+
+
 
 </html>
