--- a/static/css/slider.css
+++ b/static/css/slider.css
@@ -1,12 +1,14 @@
 body{
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   background: #34495e;
 }
 .slidershow{
   width: 1000px;
   height: 700px;
   overflow: hidden;
+
+
 }
 .middle{
   position: absolute;
@@ -96,3 +98,68 @@ input[name="r"]{
 
 
 
+
+
+
+<link rel="stylesheet" type="text/css" href="{%static 'css/slider.css'%}">
+<div class="slidershow middle">
+
+<div class="slides">
+  <input type="radio" name="r" id="r1" checked>
+  <input type="radio" name="r" id="r2">
+  <input type="radio" name="r" id="r3">
+  <input type="radio" name="r" id="r4">
+  <input type="radio" name="r" id="r5">
+
+
+  <div class="slide s1" id="one">
+    <img src="{% static 'images/fourwhite.jpg'%}">
+
+    <label class="prev" for="r5"><span>&#x2039;</span></label>
+    <label class="next" for="r2"><span>&#x203a;</span></label>
+  </div>
+
+  <div class="slide" id="two">
+    <img src="{% static 'images/yellow.jpg'%}">
+
+    <label class="prev" for="r1"><span>&#x2039;</span></label>
+    <label class="next" for="r3"><span>&#x203a;</span></label>
+  </div>
+
+
+  <div class="slide" id="three">
+    <img src="{% static 'images/red.jpg'%}">
+
+    <label class="prev" for="r2"><span>&#x2039;</span></label>
+    <label class="next" for="r4"><span>&#x203a;</span></label>
+  </div>
+
+  <div class="slide" id="four">
+    <img src="{% static 'images/black2.jpg'%}">
+
+    <label class="prev" for="r3"><span>&#x2039;</span></label>
+    <label class="next" for="r5"><span>&#x203a;</span></label>
+  </div>
+
+
+  <div class="slide" id="five">
+    <img src="{% static 'images/yellow.jpg'%}">
+
+    <label class="prev" for="r4"><span>&#x2039;</span></label>
+    <label class="next" for="r1"><span>&#x203a;</span></label>
+  </div>
+
+
+
+  <div class="navigation">
+    <label for="r1" class="bar" id="dot1"></label>
+    <label for="r2" class="bar" id="dot2"></label>
+    <label for="r3" class="bar" id="dot3"></label>
+    <label for="r4" class="bar" id="dot4"></label>
+    <label for="r5" class="bar" id="dot5"></label>
+
+  </div>
+
+
+</div>
+</div>
